<resources>
    <string name="app_name">Meu primeiro exemplo</string>
    <string name="informe_seu_userid">Informe seu UserID.</string>
    <string name="informe_o_t_tulo">Informe o título</string>
    <string name="informe_descri_o">Informe descrição</string>
    <string name="adicionar_postar">Adicionar | Postar</string>
    <string name="bot_o_de_edi_o">botão de edição</string>
    <string name="bot_o_de_exclus_o">botão de exclusão</string>
    <string name="estou_na_tela_de_usu_rio">Estou na tela de Usuário</string>
    <string name="estou_na_tela_de_addres">Estou na tela de Address</string>
    <string name="addres">Endereço</string>
    <string name="pessoa">Pessoa</string>
    <string name="user">User</string>
    <string name="post">Post</string>
    <string name="informe_o_postid">Informe o PostID</string>
    <string name="informe_o_nome">Informe o Nome</string>
    <string name="informe_o_email">Informe o Email</string>
    <string name="informe_o_body">Informe o Body</string>
    <string name="comments">Comments</string>
    <string name="informe_seu_e_mail">informe seu e-mail</string>
    <string name="informe_seu_sobrenome">informe seu sobrenome</string>
    <string name="exibir">Exibir</string>
    <string name="informe_o_phone">informe o phone</string>
    <string name="people">People</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
    <string name="eye_color">Eye Color</string>
    <string name="birth_year">Birth Year</string>
    <string name="gender">Gender</string>
    <string name="post_id">Post ID</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="body">Body</string>
    <string name="chuck_norris">Chuck Norris</string>
    <string name="usar_api">Usar API</string>
    <string name="homeworld">HomeWorld</string>
    <string name="films">Films</string>
    <string name="species">Species</string>
    <string name="vehicles">Vehicles</string>
    <string name="starships">StarShips</string>
    <string name="created">Created</string>
    <string name="edited">Edited</string>
    <string name="url">URL</string>
    <string name="baseadapter">BaseAdapter</string>
    <string name="simpleadapter">SimpleAdapter</string>
    <string name="arrayadapter">ArrayAdapter</string>
</resources>