<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activity.PostActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <EditText
            android:autofillHints="@string/informe_seu_userid"
            android:ems="10"
            android:hint="@string/informe_seu_userid"
            android:id="@+id/txtUserId"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <EditText
            android:autofillHints="@string/informe_o_t_tulo"
            android:ems="10"
            android:hint="@string/informe_o_t_tulo"
            android:id="@+id/txtTitle"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <EditText
            android:autofillHints="@string/informe_descri_o"
            android:ems="10"
            android:hint="@string/informe_descri_o"
            android:id="@+id/txtBody"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <RadioButton
                android:id="@+id/switch1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/baseadapter" />

            <RadioButton
                android:id="@+id/switch2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/simpleadapter" />

            <RadioButton
                android:id="@+id/switch3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/arrayadapter" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddPost"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="adicionarPost"
            android:text="@string/adicionar_postar" />

        <ListView
            android:id="@+id/listViewPost"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>