<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".activity.PessoaActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_nome"
            android:hint="@string/hint_nome"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textSobreNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/informe_seu_sobrenome"
            android:hint="@string/informe_seu_sobrenome"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/informe_seu_e_mail"
            android:ems="10"
            android:hint="@string/informe_seu_e_mail"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/informe_o_phone"
            android:ems="10"
            android:hint="@string/informe_o_phone"
            android:inputType="phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="exibirPessoa"
            android:text="@string/exibir" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/chuck_norris"
            app:srcCompat="@drawable/chuck_norris" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>